test/invalid-semantics/58196_int_condition/int_condition.mag
-- Author: 58196, Pedro Lopes

-- Type of condition should be a boolean
-- In this language, 1, 0 and -1 can not replace booleans 

fun main (_) : Unit -> Unit =
  if 1 then print(42) else print(0)
